<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="threeDots">&#8230;</string>
    <string name="x">X</string>
    <string name="hyphen" tools:ignore="MissingTranslation">-</string>
    <string name="please_wait">Please wait&#8230;</string>
    <string name="coma_country">, Israel</string>
    <string name="failed_to_retrieve_address">Failed to retrieve address</string>
    <string name="no_address">No address</string>
    <string name="there_was_problem_address">There was a problem when retrieving your address
        . Please try again</string>
    <string name="parse_app_id">YOUR_APPLICATION_ID</string>
    <string name="parse_client_key">YOUR_CLIENT_KEY</string>
    <string name="app_name">Splash</string>
    <string name="splashPartnersProgramsTitle">Join our Splash Partners program.</string>
    <string name="contactAgreement">By proceeding, I agree that Splash or its representatives may
        contact me by email, phone, or SMS (including by automated means) at the email address
        or number I provide, including for marketing purposes. I have read and understand
        the Splasher Privacy Statement.</string>
    <string name="title_activity_car_owner_location">Map</string>
    <string name="equipment">    -100 ml Waterless Car-wash formula spray.
        \n-2 Microfiber towels (5 reuses).</string>
    <string name="steps">    -Spray the formula and wipe before it gets dry.
        \n-Wipe in circles. \n-Work on small sections at a time.</string>
    <string name="beforeWash">BEFORE wash: \nTake 4 pictures of the car</string>
    <string name="afterWash">AFTER wash: \nTake 4 pictures of the car</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="call">Call</string>
    <string name="facebook_app_id">399400473846538</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb399400473846538</string>
    <string name="shekel">₪</string>
    <string name="dollar">$</string>
    <string name="thirty">₪ 30.0</string>
    <string name="seventy">₪ 70.0</string>
    <string name="twenty">₪ 20.0</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_rider">Splash</string>
    <string name="title_activity_driver_location">Splash</string>
    <string name="title_activity_car_owner">Splash</string>
    <string name="title_activity_washReqParams">Services &amp; Splashers</string>
    <string name="title_activity_splasherApplication">Become a Splasher</string>
    <string name="title_activity_washRequest">Wash Requests</string>
    <string name="title_activity_clientRoute">Route to car</string>
    <string name="title_activity_carAddition">Splash</string>
    <string name="title_activity_splasherCamera">Your service</string>
    <string name="title_activity_washServiceShow">Service &amp; Results</string>
    <string name="title_activity_detailedImageComparison">Results</string>
    <string name="title_activity_payment">Payment</string>
    <string name="title_activity_alerts">Splash</string>
    <string name="title_activity_about">Splash</string>
    <string name="title_activity_paymentBill">Splash</string>
    <string name="title_activity_profile">My Profile</string>
    <string name="title_activity_contactUs">Contact us</string>
    <string name="title_activity_quickTour">Splash</string>
    <string name="title_activity_wallet">My wallet</string>
    <string name="title_activity_services">My services</string>
    <string name="title_activity_createSplasher">Create Splasher Account</string>
    <string name="act_about_about">About</string>
    <string name="act_about_contactUs">Contact Us</string>
    <string name="act_about_privacyPolicy">Privacy Policy</string>
    <string name="act_about_termsOfUse">Terms Of Use</string>
    <string name="act_addAddresses_myAddresses">Add custom address</string>
    <string name="act_addAddresses_home">Home Address</string>
    <string name="act_addAddresses_work">Work</string>
    <string name="act_addAddresses_other">Other</string>
    <string name="act_addAddresses_done">Done</string>
    <string name="act_create_account">Create Account</string>
    <string name="act_alerts_alerts">Alerts</string>
    <string name="act_alerts_requestStatus">Request status</string>
    <string name="act_alerts_reminders">Reminders (Coming soon)</string>
    <string name="act_addCar_addCar">Add Car</string>
    <string name="act_addCar_brand">Brand</string>
    <string name="act_addCar_model">Model</string>
    <string name="act_addCar_color">Color:</string>
    <string name="act_addCar_year">Year:</string>
    <string name="act_addCar_plateNum">Plate #:</string>
    <string name="act_addCar_add">add</string>
    <string name="act_become_splash_signUp_first">First Name</string>
    <string name="act_become_splash_signUp_last">Last Name</string>
    <string name="act_become_splash_signUp_email">Email: name@example.com</string>
    <string name="act_become_splash_signUp_phone">Phone</string>
    <string name="act_become_splash_signUp_userName">Username</string>
    <string name="act_become_splash_signUp_password">Password</string>
    <string name="act_become_splash_signUp_repeatPass">Repeat Password</string>
    <string name="act_become_splash_signUp_city">City</string>
    <string name="act_become_splash_signUp_street">Street</string>
    <string name="act_become_splash_signUp_streetNum">No.</string>
    <string name="act_become_splash_signUp_signUp">Apply</string>
    <string name="act_become_splash_signUp_login">Log In</string>
    <string name="act_become_splash_signUp_orLogin">or SignUp</string>
    <string name="act_become_splasher_signUp_countryID">Country ID (Teudad Zeut)</string>
    <string name="act_become_splasher_signUp_countryIdIssued">Country ID issue date</string>
    <string name="act_become_splasher_signUp_dateOfBirth">Date of birth</string>
    <string name="act_become_splasher_signUp_genderMale">Male</string>
    <string name="act_become_splasher_signUp_genderFemale">Female</string>
    <string name="act_become_splasher_signUp_bankCode">Bank code</string>
    <string name="act_become_splasher_signUp_bankBranch">Bank branch #</string>
    <string name="act_become_splasher_signUp_bankAccNum">Bank Account number</string>
    <string name="becomeSplasher_act_java_photoOfId">Photo of ID</string>
    <string name="becomeSplasher_act_java_photoOfBankAcc">Photo of bank account proof</string>
    <string name="becomeSplasher_act_java_photoOfincDoc">Photo of incorporation document</string>
    <string name="becomeSplasher_act_java_splasherType">Splasher type</string>
    <string name="becomeSplasher_act_java_independent">Independent</string>
    <string name="becomeSplasher_act_java_hired">Hired</string>
    <string name="seller_account_creator">Seller Account Creator</string>
    <string name="act_become_splash_next">Next</string>
    <string name="act_camera_intent_frontNBack">Front And Back:</string>
    <string name="act_camera_intent_frontSide">Front Side</string>
    <string name="act_camera_intent_RearSide">Rear Side</string>
    <string name="act_camera_intent_LeftSide">Left Side</string>
    <string name="act_camera_intent_RightSide">Right Side</string>
    <string name="act_camera_intent_leftNRight_sides">Left and Right side:</string>
    <string name="act_camera_intent_send">send</string>
    <string name="act_camera_intent_sendNFinish">send &amp; finish</string>
    <string name="act_camera_intent_sendingPictures">Sending pictures</string>
    <string name="act_camera_intent_underScore1">_</string>
    <string name="act_camera_intent_letsWash">Let\'s Wash!</string>
    <string name="act_camera_intent_dryMethod">Dry Method:</string>
    <string name="act_camera_intent_equipment">Equipment:</string>
    <string name="act_camera_intent_steps">Steps:</string>
    <string name="act_camera_intent_done">done!</string>
    <string name="act_car_being_washed_washing">Washing</string>
    <string name="act_car_being_washed_allDone">All done. Your car is washed!</string>
    <string name="act_car_being_washed_strdTime">(Standard car wash time may take up to 30 min. Sit tight)</string>
    <string name="act_car_being_washed_picsCar">Pictures of your car before and after the wash</string>
    <string name="act_car_being_washed_front">front</string>
    <string name="act_car_being_washed_rear">rear</string>
    <string name="act_car_being_washed_left">left</string>
    <string name="act_car_being_washed_right">right</string>
    <string name="act_car_being_washed_rateSplasher">Rate this Splasher</string>
    <string name="act_car_being_washed_tip">Tip</string>
    <string name="act_car_being_washed_goCheckout">Go to checkout</string>
    <string name="act_car_being_washed_beforeCarPics">Pictures of your car before the wash</string>
    <string name="act_car_being_washed_waitingFoBefoPics">Waiting for the pictures of your car\'s current state</string>
    <string name="act_car_owner_washMyCar">Wash my car</string>
    <string name="act_car_owner_cancelWash">Cancel wash</string>
    <string name="act_car_owner_letWashCar">Let\'s wash a car</string>
    <string name="act_car_owner_splasherStatus">Splasher status</string>
    <string name="act_car_owner_requestDets">Request Details</string>
    <string name="act_car_owner_profPicWindow">Profile pic</string>
    <string name="act_car_owner_responsibility">Responsibility: 0</string>
    <string name="act_car_owner_generosity">Generosity: 0</string>
    <string name="act_car_owner_accuracy">Accuracy: 0</string>
    <string name="act_car_owner_fairness">Fairness: 0</string>
    <string name="act_car_owner_distanceTitle">- Distance:</string>
    <string name="act_car_owner_distanceValue">XXXm</string>
    <string name="act_car_owner_availableTitle">- Available Until:</string>
    <string name="act_car_owner_availableValue">00:00</string>
    <string name="act_car_owner_serviceTitle">- Service:</string>
    <string name="act_car_owner_youGetValue">$XXX</string>
    <string name="act_car_owner_cancel">Cancel</string>
    <string name="act_car_owner_go">Go</string>
    <string name="act_car_owner_version">V.1.0.1</string>
    <string name="act_car_owner_levelWanted">Splasher Level Wanted</string>
    <string name="act_car_owner_contentDesc">Splasher Badge</string>
    <string name="act_car_owner_comingsoon">Coming soon</string>
    <string name="act_car_owner_youHaveNewOrders">You have new orders!</string>
    <string name="act_car_owner_isAsking">People are asking for your services.
        Check out these requests?</string>
    <string name="act_car_owner_yes">yes</string>
    <string name="act_car_owner_decline">not now</string>
    <string name="act_car_owner_waitingForAResponse">Waiting for a response from the splasher
        you ordered&#8230;</string>
    <string name="car_row_carBrand">Car Brand</string>
    <string name="car_row_carModel">Car Model</string>
    <string name="car_row_carYear">Car Year</string>
    <string name="car_row_carColor">Car Color</string>
    <string name="car_row_carPlateNum">Car Plate Num</string>
    <string name="header_profPic">Profile Pic</string>
    <string name="header_username">Username</string>
    <string name="header_email">Email</string>
    <string name="header_usertype">UserType</string>
    <string name="header_ratingBadge">ratingBadge</string>
    <string name="header_hiPleaseLogIn">Hi. Please Log In</string>
    <string name="nav_menu_alerts">Alerts</string>
    <string name="nav_menu_feedback">Feedback</string>
    <string name="nav_menu_payment">Payment</string>
    <string name="nav_menu_about">About</string>
    <string name="nav_menu_faq">FAQ</string>
    <string name="nav_menu_logout">Logout</string>
    <string name="nav_menu_quickTour">Quick tour</string>
    <string name="nav_menu_myServices">My services</string>
</resources>