<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/headerRelative"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="160dp"
    android:background="@color/colorfirst"
    android:padding="7dp">

    <ImageView
        android:id="@+id/userProfilePics"
        android:src="@drawable/theemptyface"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:contentDescription="@string/header_profPic" />

    <LinearLayout
        android:id="@+id/userProfDetailedInfo"
        android:gravity="center_horizontal"
        android:layout_marginTop="6dp"
        android:orientation="vertical"
        android:layout_below="@+id/userProfilePics"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/userProfileUsername"
            android:text="@string/header_username"
            android:textColor="#ffffff"
            android:textAlignment="center"
            android:layout_marginTop="6dp"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/userProfileEmail"
            android:text="@string/header_email"
            android:textColor="#ffffff"
            android:visibility="gone"
            android:layout_marginTop="2dp"
            android:textAlignment="center"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/userProfileUserType"
            android:text="@string/header_usertype"
            android:layout_marginTop="2dp"
            android:textAlignment="center"
            android:visibility="gone"
            android:textColor="#ffffff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/ratingBadge"
            android:layout_marginTop="3dp"
            android:padding="1dp"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:contentDescription="@string/header_ratingBadge" />

    </LinearLayout>

    <TextView
        android:id="@+id/userlessMsg"
        android:layout_below="@+id/userProfilePics"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"
        android:textColor="#ffffff"
        android:textSize="23sp"
        android:textAlignment="center"
        android:text="@string/header_hiPleaseLogIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>