<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="12dp"
    android:layout_width="match_parent"
    android:id="@+id/total"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/thumbNail"
        android:layout_alignParentStart="true"
        android:src="@drawable/car"
        android:layout_width="35dp"
        android:layout_height="39dp"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/carBrandRow"
        android:text="@string/car_row_carBrand"
        android:layout_marginStart="15dp"
        android:textColor="#4990E2"
        android:textSize="13sp"
        android:textStyle="bold"
        android:layout_toEndOf="@+id/thumbNail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" />

    <TextView
        android:id="@+id/carModelRow"
        android:text="@string/car_row_carModel"
        android:layout_marginStart="8dp"
        android:textColor="#4990E2"
        android:textStyle="italic"
        android:layout_toEndOf="@+id/carBrandRow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/carYearRow"
        android:text="@string/car_row_carYear"
        android:visibility="gone"
        android:layout_marginTop="4dp"
        android:layout_below="@+id/carBrandRow"
        android:textColor="#4990E2"
        android:layout_alignStart="@+id/carBrandRow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/carColorRow"
        android:text="@string/car_row_carColor"
        android:layout_alignStart="@+id/carBrandRow"
        android:layout_marginTop="4dp"
        android:layout_below="@+id/carBrandRow"
        android:textColor="#4990E2"
        android:layout_toEndOf="@+id/carYearRow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/carPlateRow"
        android:text="@string/car_row_carPlateNum"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_below="@+id/carBrandRow"
        android:textColor="#4990E2"
        android:layout_toEndOf="@+id/carColorRow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>